--- a/src/components/App.css
+++ b/src/components/App.css
@@ -9,9 +9,13 @@
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
+  color: black;
 }
 
 .App-link {
-  color: #61dafb;
+  color: #000000;
+}
+
+.Image{
+  max-width: 100%;
 }
